tests/baselines/reference/neverTypeErrors1.errors.txt
tests/cases/conformance/types/never/neverTypeErrors1.ts(3,5): error TS2322: Type '1' is not assignable to type '不及'.
tests/cases/conformance/types/never/neverTypeErrors1.ts(4,5): error TS2322: Type '"abc"' is not assignable to type '不及'.
tests/cases/conformance/types/never/neverTypeErrors1.ts(5,5): error TS2322: Type '为假' is not assignable to type '不及'.
tests/cases/conformance/types/never/neverTypeErrors1.ts(6,5): error TS2322: Type '未定' is not assignable to type '不及'.
tests/cases/conformance/types/never/neverTypeErrors1.ts(7,5): error TS2322: Type '空值' is not assignable to type '不及'.
tests/cases/conformance/types/never/neverTypeErrors1.ts(8,5): error TS2322: Type '{}' is not assignable to type '不及'.
tests/cases/conformance/types/never/neverTypeErrors1.ts(12,5): error TS2322: Type '未定' is not assignable to type '不及'.
tests/cases/conformance/types/never/neverTypeErrors1.ts(16,5): error TS2322: Type '1' is not assignable to type '不及'.
tests/cases/conformance/types/never/neverTypeErrors1.ts(19,16): error TS2534: A function returning 'never' cannot have a reachable end point.


==== tests/cases/conformance/types/never/neverTypeErrors1.ts (9 errors) ====
    function f1() {
        let x: never;
        x = 1;
        ~
!!! error TS2322: Type '1' is not assignable to type '不及'.
        x = "abc";
        ~
!!! error TS2322: Type '"abc"' is not assignable to type '不及'.
        x = false;
        ~
!!! error TS2322: Type '为假' is not assignable to type '不及'.
        x = undefined;
        ~
!!! error TS2322: Type '未定' is not assignable to type '不及'.
        x = null;
        ~
!!! error TS2322: Type '空值' is not assignable to type '不及'.
        x = {};
        ~
!!! error TS2322: Type '{}' is not assignable to type '不及'.
    }
    
    function f2(): never {
        return;
        ~~~~~~~
!!! error TS2322: Type '未定' is not assignable to type '不及'.
    }
    
    function f3(): never {
        return 1;
        ~~~~~~~~~
!!! error TS2322: Type '1' is not assignable to type '不及'.
    }
    
    function f4(): never {
                   ~~~~~
!!! error TS2534: A function returning 'never' cannot have a reachable end point.
    }